--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<h1>🖤👑LEGEND NEVER DIE👑🖤</h1>
 	<h1>🥺👑YAMA BUDDHA👑🥺</h1>
 	<h3>Anil Adhikari (30 May 1987 – 14 January 2017) was a Nepalese rapper better known <br> by his stage name Yama Buddha.He was one of the most prominent rappers in Nepal.<br> His songs Sathi, Aama, Aaudai chhu ma, Yo Prasanga, Antya Ko Suruwat etc.are<br>  popular  hits.He was the creator and the presenter of the Popular Rap Battle show Raw<br>  Barz.</h3> 
-	<img src="./YBPhotos/1335442631_374083899302633_182315218479503_1186605_142453317_n.jpg" class="p">
-	<img src="YBPhotos./20bcc059-f956-4680-99f1-3e1a71c141ce.jpg" class="mad">
+	<img src="YBPhotos./1335442631_374083899302633_182315218479503_1186605_142453317_n.jpg" class="p">
+	<img src="20bcc059-f956-4680-99f1-3e1a71c141ce.jpg" class="mad">
 	<table border="5px" align="center"   > 
 		<tr>
 		<td class="yama">Yama
